--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,4 @@
-/* Original CSS
+
 
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
@@ -62,7 +62,7 @@ body {
 }
 
 .right-aligned-list-value-label {
-    float: right;
+    float: left;
 }
 
 .left-label {
@@ -364,7 +364,6 @@ button[disabled], html input[disabled] {
   }
 }
 
-*/
 
 .list-group-item.mp_order_ID,
 .list-group-item.mp_currency,
