--- a/custom.css
+++ b/custom.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    background-color: #d6d6d6;
+    background-color: #fcb0b0;
     padding: 0;
 }
 
